[package]
name = "rtps"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
license = "MIT"
description = "OMG RTPS 2.2"

[lib]
doctest = false

[dependencies]
"bitflags" = "0.7.*"
"byteorder" = "0.5.*"
"clippy" = "0.0.*"
"net2" = "0.2.*"
"serde" = "0.8.*"

[[test]]
name = "test"
path = "test/mod.rs"